force-app/main/default/objects/Tech_Debt__c/Tech_Debt__c.object-meta.xml
<CustomObject>
    <label>Tech Debt</label>
    <pluralLabel>Tech Debts</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>TDB-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks technical debt items identified through scans and manual reviews</description>
</CustomObject>