force-app/main/default/objects/Tech_Debt__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>Business Justification</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>