force-app/main/default/objects/Tech_Debt__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Lookup</type>
    <referenceTo>Component__c</referenceTo>
    <relationshipName>Tech_Debts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>