force-app/main/default/objects/Tech_Debt__c/fields/Debt_Type__c.field-meta.xml
<CustomField>
    <fullName>Debt_Type__c</fullName>
    <label>Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Code</fullName><default>false</default><label>Code</label></value>
            <value><fullName>Config</fullName><default>false</default><label>Config</label></value>
            <value><fullName>Architecture</fullName><default>false</default><label>Architecture</label></value>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
            <value><fullName>Performance</fullName><default>false</default><label>Performance</label></value>
            <value><fullName>Documentation</fullName><default>false</default><label>Documentation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>