force-app/main/default/objects/Tech_Debt__c/fields/First_Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Detected_Date__c</fullName>
    <label>First Detected Date</label>
    <type>Date</type>
</CustomField>