force-app/main/default/objects/Tech_Debt__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Tech_Debts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>