force-app/main/default/objects/Tech_Debt__c/fields/Scan_Count__c.field-meta.xml
<CustomField>
    <fullName>Scan_Count__c</fullName>
    <label>Scan Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>