force-app/main/default/objects/Tech_Debt__c/fields/Scan_Issue__c.field-meta.xml
<CustomField>
    <fullName>Scan_Issue__c</fullName>
    <label>Scan Issue</label>
    <type>Lookup</type>
    <referenceTo>Scan_Issue__c</referenceTo>
    <relationshipName>Tech_Debts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>