force-app/main/default/objects/Tech_Debt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>InProgress</fullName><default>false</default><label>InProgress</label></value>
            <value><fullName>Remediated</fullName><default>false</default><label>Remediated</label></value>
            <value><fullName>WrittenOff</fullName><default>false</default><label>WrittenOff</label></value>
            <value><fullName>Deferred</fullName><default>false</default><label>Deferred</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>