force-app/main/default/objects/Tech_Debt__c/fields/Write_Off_Approver__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Approver__c</fullName>
    <label>Write Off Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Write_Offs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>